# STEPS

./: .gitignore  Cargo.toml  README.md
.github/workflows/: PULL_REQUEST_TEMPLATE.md  draft-pdf.yml
JOSS/: paper.bib  paper.md
cli/: Cargo.toml
cli/src/: cfg.rs  io.rs  lib.rs
core/: Cargo.toml
core/src/: cfg.rs  lib.rs
core/src/io/: input_parsing.rs  mod.rs
core/src/io/output/: mod.rs  outputter_impls.rs
core/src/sim/: distr.rs  kernels.rs  mechanics.rs  mod.rs  sequencing.rs  summarize.rs  types.rs
