[workspace]
default-members = ["core", "cli"]
members = ["core", "cli"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "2.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"

[workspace.dependencies]
itertools = "0.12.0"
clap = { version = "3.2", features = ["derive"] }
indicatif = "0.15"
serde = "1.0"
serde_tuple = "0.5"
serde_json = "1.0"
csv = "1.1"
hashbrown = "0.14.3"
rand = "0.7"
rand_pcg = "0.2"
rand_distr = "0.2"
anyhow = "1.0"
thiserror = "1.0"
slices_dispatch_wide = "0.1.1"
derive_builder = "0.12.0"
approx = "0.5.0"
